--- a/index.html
+++ b/index.html
@@ -104,11 +104,9 @@
             <h4 class="modal-title text-uppercase text-center" id="froggerModalLabel">Canvas Game</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="images/frogger568x384.jpg" width="568" height="384" alt="A screenshot of my online frogger game">
-            This game was developed as part of project 3 of Udacity's Front End Web Developer Nanodegree.  We were
-            given a background of tiles and some specific rules, which we were allowed to build upon to create an
-            online game similar to Frogger using HTML5 Canvas and Javascript.  The game can be played online
-            <a href="http://www.cherylcourt.ca/frogger" target="_blank">here</a>.
+            <img class="img-responsive modal-image" src="images/busy.jpg" width="568" height="384" alt="A screenshot of my online frogger game">
+            Hier könnte ihre Beschreibung stehen
+            <a href="http://www.florian-wegener.de" target="_blank">here</a>.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -125,9 +123,8 @@
           </div>
           <div class="modal-body">
             <img class="img-responsive modal-image" src="images/resume568x390.jpg" width="568" height="390" alt="A screenshot of my online resume">
-            This online interactive resume was developed as part of project 2 of Udacity's Front End Web Developer Nanodegree.  We were
-            given some existing javascript to modify and add content to.  The resume can be found online
-            <a href="http://cherylcourt.github.io/resume" target="_blank">here</a>.
+            Hier könnte ihre Beschreibung stehen
+            <a href="http://fwegener83.github.io/" target="_blank">here</a>.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -144,9 +141,7 @@
           </div>
           <div class="modal-body">
             <img class="img-responsive modal-image" src="images/portfolio568x390.jpg" width="568" height="390" alt="A screenshot of my online resume">
-            This online portfolio was developed as project 1 of Udacity's Front End Web Developer Nanodegree.  We were
-            given a static layout design mockup for how the portfolio should look and used the concepts learned in
-            Udacity's Intro to HTML and CSS course to build the page.
+            Hier könnte ihre Beschreibung stehen
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -159,14 +154,13 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title text-uppercase text-center" id="webModalLabel">Web Development Course Project - Wiki</h4>
+            <h4 class="modal-title text-uppercase text-center" id="webModalLabel">Hier könnte ihre Beschreibung stehen</h4>
           </div>
           <div class="modal-body">
-            <a href="http://helpful-kit-572.appspot.com/" target="_blank">
-              <img class="img-responsive modal-image" src="images/web568x379.jpg" width="568" height="379" alt="Spider web covered in dew">
+            <a href="http://florian-wegener.de" target="_blank">
+              <img class="img-responsive modal-image" src="images/busy.jpg" width="568" height="379" alt="Hier könnte ihre Beschreibung stehen">
             </a>
-            I created <a href="http://helpful-kit-572.appspot.com/" target="_blank">a simple wiki</a> for the final project of the <a href="https://www.udacity.com/course/cs253" target="_blank">Web Development</a> course at <a href="https://www.udacity.com" target="_blank">Udacity</a>.  This wiki allows the user to browse content, look at content history as well as set up an account to create new and edit existing pages.
-          </div>
+            Hier könnte ihre Beschreibung stehen
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
@@ -178,11 +172,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title text-uppercase text-center" id="railsModalLabel">My First Rails App</h4>
+            <h4 class="modal-title text-uppercase text-center" id="railsModalLabel">Hier könnte ihre Beschreibung stehen</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="images/rails568x379.jpg" width="568" height="379" alt="Railroad tracks leading into a tunnel">
-            I successfully created a sample Ruby on Rails project as part of the <a href="https://www.railstutorial.org/" target="_blank">Ruby on Rails Tutorial: Learn Rails by Example</a> by <a href="http://www.michaelhartl.com/" target="_blank">Michael Hartl</a>.
+            <img class="img-responsive modal-image" src="images/busy.jpg" width="568" height="379" alt="Hier könnte ihre Beschreibung stehen">
+            Hier könnte ihre Beschreibung stehen
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -198,8 +192,8 @@
             <h4 class="modal-title text-uppercase text-center" id="pythonModalLabel">Anyconf</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="images/python568x379.jpg" width="568" height="379" alt="A python coiled up in the grass facing the camera">
-            AnyConf is a configuration library for python that wraps several other configuration libraries under a common API.  I added YAML support to this library.  This project as a whole was a collaborative effort.
+            <img class="img-responsive modal-image" src="images/busy.jpg" width="568" height="379" alt="Hier könnte ihre Beschreibung stehen">
+            Hier könnte ihre Beschreibung stehen
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -216,7 +210,7 @@
             <h4 class="modal-title text-uppercase text-center" id="aboutMeModalLabel">About Me</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="images/avatar.jpg" width="568" height="379" alt="A small headshot of Cheryl Court">
+            <img class="img-responsive modal-image" src="images/avatar.jpg" width="568" height="379" alt="Hier könnte ihre Beschreibung stehen">
             <p>
               Etwas über mich
             </p>
