--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.min.css">
+    <<link rel="stylesheet" href="css/main.css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700'>
     <link rel="icon" href="images/avatar.png" type="image/x-png">
 
@@ -29,11 +30,78 @@
       </div>
 
       <hr>
-
+<!--
       <div class="row">
         <div class="col-md-12">
-          <img class="img-responsive" src="images/code.jpg" width="1140" height="310" alt="Zen garden with sand groomed into a grid pattern">
+          <img class="img-responsive" src="images/code.jpg" width="1140" height="310" alt="Code">
         </div>
+      </div>
+  -->
+
+
+<!--Skillbar -->
+<h2>Some Skills</h2>
+      <div class="row">
+
+      
+				<script type="text/javascript">
+					jQuery(document).ready(function(){
+						jQuery('.skillbar').each(function(){
+							jQuery(this).find('.skillbar-bar').animate({
+								width:jQuery(this).attr('data-percent')
+							},6000);
+						});
+					});
+				</script>
+			
+
+			<div class="col-md-12">
+				 <div class="skillbar clearfix " data-percent="95%">
+					<div class="skillbar-title" style="background: #d35400;"><span>Excel</span></div>
+					<div class="skillbar-bar" style="background: #e67e22;"></div>
+					<div class="skill-bar-percent">95%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="90%">
+					<div class="skillbar-title" style="background: #2980b9;"><span>Power Query</span></div>
+					<div class="skillbar-bar" style="background: #3498db;"></div>
+					<div class="skill-bar-percent">90%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="70%">
+					<div class="skillbar-title" style="background: #2c3e50;"><span>Power Pivot</span></div>
+					<div class="skillbar-bar" style="background: #2c3e50;"></div>
+					<div class="skill-bar-percent">70%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="30%">
+					<div class="skillbar-title" style="background: #46465e;"><span>PHP</span></div>
+					<div class="skillbar-bar" style="background: #5a68a5;"></div>
+					<div class="skill-bar-percent">30%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="60%">
+					<div class="skillbar-title" style="background: #333333;"><span>Java OOP</span></div>
+					<div class="skillbar-bar" style="background: #525252;"></div>
+					<div class="skill-bar-percent">60%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="20%">
+					<div class="skillbar-title" style="background: #27ae60;"><span>Numpy</span></div>
+					<div class="skillbar-bar" style="background: #2ecc71;"></div>
+					<div class="skill-bar-percent">20%</div>
+				</div> <!-- End Skill Bar -->
+
+				<div class="skillbar clearfix " data-percent="20%">
+					<div class="skillbar-title" style="background: #124e8c;"><span>Pandas</span></div>
+					<div class="skillbar-bar" style="background: #4288d0;"></div>
+					<div class="skill-bar-percent">20%</div>
+				</div> <!-- End Skill Bar -->
+
+
+        </div>
+        <!--Skillbar END -->
+
       </div>
 
       <h2>Featured Work</h2>
@@ -41,25 +109,25 @@
       <div class="row text-center">
         <div class="col-md-4">
           <img class="img-responsive center-block" src="images/busy.jpg" width="360" height="243" data-toggle="modal" data-target="#frogger">
-          <h3>Canvas Game</h3>
-          <p>
-            <a href="https://github.com/fwegener83" target="_blank">
-              https://github.com/fwegener83
-            </a>
-          </p>
-        </div>
-        <div class="col-md-4">
-          <img class="img-responsive center-block" src="images/busy.jpg" width="360" height="247" alt="Screenshot of online resume" data-toggle="modal" data-target="#resume">
-          <h3>Interactive Resume</h3>
-          <p>
-            <a href="https://github.com/fwegener83" target="_blank">
-              https://github.com/fwegener83
-            </a>
-          </p>
-        </div>
-        <div class="col-md-4">
-          <img class="img-responsive center-block" src="images/busy.jpg" width="360" height="247" alt="A screenshot of my online portfolio" data-toggle="modal" data-target="#portfolio">
           <h3>Online Portfolio</h3>
+          <p>
+            <a href="https://github.com/fwegener83" target="_blank">
+              https://github.com/fwegener83
+            </a>
+          </p>
+        </div>
+        <div class="col-md-4">
+          <img class="img-responsive center-block" src="images/python.jpg" width="360" height="247" alt="Screenshot of online resume" data-toggle="modal" data-target="#resume">
+          <h3>Statistics with Python</h3>
+          <p>
+            <a href="https://github.com/fwegener83" target="_blank">
+              https://github.com/fwegener83
+            </a>
+          </p>
+        </div>
+        <div class="col-md-4">
+          <img class="img-responsive center-block" src="images/data.jpg" width="360" height="247" alt="A screenshot of my online portfolio" data-toggle="modal" data-target="#portfolio">
+          <h3>Data Wrangling</h3>
           <p>
             <a href="https://github.com/fwegener83" target="_blank">
               https://github.com/fwegener83
@@ -72,6 +140,8 @@
     </div>
 
     <footer class="text-center">
+
+    <!--
       <a href="https://twitter.com/" target="_blank">
         <img src="images/twitter.png" width="24" height="24" alt="twitter">
       </a>
@@ -80,8 +150,14 @@
         <img src="images/google.png" width="24" height="24" alt="google+">
       </a>
 
-      <a href="https://www.linkedin.com/" target="_blank">
+      -->
+
+      <a href="https://www.linkedin.com/in/florian-wegener-924806a6/" target="_blank">
         <img src="images/linkedin.png" width="24" height="24" alt="linkedIn">
+      </a>
+
+      <a href="https://www.xing.com/profile/Florian_Wegener2" target="_blank">
+        <img src="images/xing.png" width="24" height="24" alt="linkedIn">
       </a>
 
       <p>
@@ -94,6 +170,7 @@
           CC BY 3.0
         </a>
       </p>
+     
     </footer>
 
     <!-- Modals -->
@@ -101,11 +178,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title text-uppercase text-center" id="froggerModalLabel">Canvas Game</h4>
+            <h4 class="modal-title text-uppercase text-center" id="froggerModalLabel">Online Portfolio</h4>
           </div>
           <div class="modal-body">
             <img class="img-responsive modal-image" src="images/busy.jpg" width="568" height="384" alt="A screenshot of my online frogger game">
-            Hier könnte ihre Beschreibung stehen
+            In progress. Click
             <a href="http://www.florian-wegener.de" target="_blank">here</a>.
           </div>
           <div class="modal-footer">
@@ -119,11 +196,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title text-uppercase text-center" id="resumeModalLabel">Interactive Resume</h4>
+            <h4 class="modal-title text-uppercase text-center" id="resumeModalLabel">Statistics with Python</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="images/resume568x390.jpg" width="568" height="390" alt="A screenshot of my online resume">
-            Hier könnte ihre Beschreibung stehen
+            <img class="img-responsive modal-image" src="images/python.jpg" width="568" height="390" alt="A screenshot of my online resume">
+            In progress. Click
             <a href="http://fwegener83.github.io/" target="_blank">here</a>.
           </div>
           <div class="modal-footer">
@@ -137,11 +214,11 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title text-uppercase text-center" id="portfolioModalLabel">Online Portfolio</h4>
+            <h4 class="modal-title text-uppercase text-center" id="portfolioModalLabel">Data wrangling</h4>
           </div>
           <div class="modal-body">
-            <img class="img-responsive modal-image" src="images/portfolio568x390.jpg" width="568" height="390" alt="A screenshot of my online resume">
-            Hier könnte ihre Beschreibung stehen
+            <img class="img-responsive modal-image" src="images/data.jpg" width="568" height="390" alt="A screenshot of my online resume">
+            In progress
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
